--- a/netbeans_project/pom.xml
+++ b/netbeans_project/pom.xml
@@ -15,14 +15,14 @@
         <dependency>
             <groupId>net.imagej</groupId>
             <artifactId>imagej</artifactId>
-            <version>2.0.0-rc-30</version>
+            <version>2.0.0-rc-29</version>
         </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <imagej.path>C:/Users/Ava-chan/Desktop/Fiji.app</imagej.path>
+        <imagej.path>C:/Program Files (x86)/ImageJ</imagej.path>
     </properties>
     <build>
     <finalName>${project.artifactId}_${project.version}</finalName>
