--- a/netbeans_project/pom.xml
+++ b/netbeans_project/pom.xml
@@ -20,9 +20,9 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        <imagej.path>C:/Program Files (x86)/ImageJ</imagej.path>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+        <imagej.path>/Users/Arti/Desktop/ImageJ</imagej.path>
     </properties>
     <build>
     <finalName>${project.artifactId}_${project.version}</finalName>
